feat(OMN-1656): Add pattern_learning_compute handlers foundation
Create the foundational handlers/ directory structure for the
pattern_learning_compute node with internal types, exceptions,
presets, and utilities.

New files:
- handlers/__init__.py: Module exports
- handlers/exceptions.py: PATLEARN_001/002 error codes
- handlers/protocols.py: Internal TypedDicts for handler intermediates
- handlers/presets.py: Signature versioning, default weights, thresholds
- handlers/utils.py: jaccard_similarity, normalization helpers

Also includes a minor config addition to pattern_extraction_compute
(max_results_per_pattern_type).

--- a/src/omniintelligence/nodes/pattern_extraction_compute/contract.yaml
+++ b/src/omniintelligence/nodes/pattern_extraction_compute/contract.yaml
@@ -102,6 +102,11 @@ configuration:
     # Prevents overly broad patterns with low signal.
     max_files_per_pattern: 20
 
+    # Maximum patterns to return per pattern subtype (e.g., recurring_failure,
+    # failure_sequence, context_failure). Prevents any single subtype from
+    # dominating results.
+    max_results_per_pattern_type: 20
+
     # Staleness threshold in days for pattern decay.
     # Patterns older than this receive reduced confidence.
     pattern_staleness_days: 30
