fix: wrap long description line in contract.yaml for yamlfmt
The yamlfmt pre-commit hook was failing because the output_model
description exceeded the line length limit. Changed to YAML folded
style (>-) for multi-line compatibility.

--- a/src/omniintelligence/nodes/pattern_learning_compute/contract.yaml
+++ b/src/omniintelligence/nodes/pattern_learning_compute/contract.yaml
@@ -24,7 +24,8 @@ input_model:
 output_model:
   name: "ModelPatternLearningOutput"
   module: "omniintelligence.nodes.pattern_learning_compute.models"
-  description: "Output containing candidate/learned patterns, metrics, and metadata. Uses contract models from omnibase_core."
+  description: >-
+    Output containing candidate/learned patterns, metrics, and metadata. Uses contract models from omnibase_core.
 # Minimal sections for stub
 dependencies: []
 # Error Handling Configuration (stub - minimal)
