feat(OMN-1657): Update pattern learning output to use omnibase_core contract models (#31)
* feat(OMN-1657): Update pattern learning output to use omnibase_core contract models

Replace local TypedDict definitions with canonical contract models from
omnibase_core.models.pattern_learning. This enables type-safe pattern
handling with lifecycle state awareness (candidate vs learned patterns).

- Update omnibase-core dependency to ^0.9.8
- Import ModelLearnedPattern, ModelPatternLearningMetrics, ModelPatternLearningMetadata
- Split patterns into candidate_patterns and learned_patterns based on lifecycle_state
- Remove LearnedPatternDict and LearningMetadataDict (now in core)
- Add warnings field for non-fatal processing issues

* fix: wrap long description line in contract.yaml for yamlfmt

The yamlfmt pre-commit hook was failing because the output_model
description exceeded the line length limit. Changed to YAML folded
style (>-) for multi-line compatibility.

* chore: bump omnibase-core to ^0.9.9

Update omnibase-core dependency from ^0.9.8 to ^0.9.9 to access latest
contract models and fixes.

* feat(OMN-1657): Add from_patterns factory method and enhance docstring

Add convenience factory method that automatically splits patterns by
lifecycle_state, and improve docstring to explicitly document the
candidate vs learned pattern categorization.

* fix(OMN-1657): Update outdated comments and improve factory docstring

- Update protocols.py comment to reference ModelLearnedPattern and
  ModelPatternScoreComponents instead of removed TypedDict names
- Enhance from_patterns() docstring to clarify success=True behavior
  and suggest using constructor directly for failure cases

* fix(OMN-1657): Use EnumPatternLifecycleState instead of string comparison

Replace string literal "validated" with EnumPatternLifecycleState.VALIDATED
for type-safe lifecycle state comparison in from_patterns() factory method.
Also correct docstring to reference actual enum states (CANDIDATE, PROVIS

--- a/src/omniintelligence/nodes/pattern_learning_compute/contract.yaml
+++ b/src/omniintelligence/nodes/pattern_learning_compute/contract.yaml
@@ -24,7 +24,8 @@ input_model:
 output_model:
   name: "ModelPatternLearningOutput"
   module: "omniintelligence.nodes.pattern_learning_compute.models"
-  description: "STUB: Output containing learned patterns and metrics."
+  description: >-
+    Output containing candidate/learned patterns, metrics, and metadata. Uses contract models from omnibase_core.
 # Minimal sections for stub
 dependencies: []
 # Error Handling Configuration (stub - minimal)
@@ -48,10 +49,9 @@ health_check:
 metadata:
   author: "OmniNode Team"
   created: "2025-11-14"
-  updated: "2026-01-18"
+  updated: "2026-01-29"
   # NOTE: status field is at root level (line 17), not duplicated here
   tags:
     - "ONEX"
     - "compute"
     - "pattern-learning"
-    - "stub"
