--- a/src/omniintelligence/nodes/node_pattern_feedback_effect/contract.yaml
+++ b/src/omniintelligence/nodes/node_pattern_feedback_effect/contract.yaml
@@ -30,9 +30,10 @@ node_type: "EFFECT_GENERIC"
 # Description
 description: >
   Effect node for recording session outcomes and updating rolling window metrics in PostgreSQL. Receives
-  session outcome events containing pattern_id, success/failure status, and optional metrics. Updates
-  the rolling_pattern_metrics table with aggregated statistics over configurable time windows (1h, 24h,
-  7d). Provides feedback loop data for pattern learning and confidence scoring nodes.
+  session outcome events containing session_id, success flag, optional failure_reason, and correlation_id.
+  Updates the pattern_injections table to mark outcomes as recorded and updates the learned_patterns table
+  with rolling window metrics (rolling_20 counters using decay approximation). Provides feedback loop data
+  for pattern learning and confidence scoring nodes.
 # Strongly typed I/O models
 input_model:
   name: "ModelSessionOutcomeRequest"
@@ -51,17 +52,17 @@ output_model:
 #
 # Implementation Note:
 #   The main entry point is `record_session_outcome()` which:
-#     - Validates the session outcome request
-#     - Inserts outcome record into session_outcomes table
-#     - Updates rolling window aggregates in rolling_pattern_metrics table
-#     - Returns updated metric summary
+#     - Finds unrecorded pattern_injections for the session
+#     - Marks injections as recorded with outcome (success/failure)
+#     - Updates rolling window metrics in learned_patterns table
+#     - Returns counts of updated records
 #
 # Execution Flow:
-#   1. Receive ModelSessionOutcomeRequest with pattern_id, outcome, metrics
-#   2. Validate request and resolve pattern reference
-#   3. Insert outcome record with timestamp
-#   4. Trigger rolling window update (1h, 24h, 7d aggregates)
-#   5. Return ModelSessionOutcomeResult with status and metric snapshot
+#   1. Receive ModelSessionOutcomeRequest with session_id, success, failure_reason
+#   2. Find all pattern_injections for this session that haven't been processed
+#   3. Mark injections as recorded with the outcome
+#   4. Update rolling_20 metrics for all unique patterns involved (decay approximation)
+#   5. Return ModelSessionOutcomeResult with status, counts, and pattern_ids
 # =============================================================================
 handler_routing:
   routing_strategy: "single_entry"
@@ -78,21 +79,16 @@ io_operations:
   - operation: "record_session_outcome"
     description: "Record a session outcome and update rolling window metrics for the associated pattern"
     input_fields:
-      - pattern_id
       - session_id
+      - success
+      - failure_reason
       - correlation_id
-      - outcome
-      - timestamp_utc
-      - metrics
-      - metadata
     output_fields:
       - status
-      - pattern_id
       - session_id
-      - correlation_id
-      - outcome_id
-      - rolling_metrics_snapshot
-      - processing_time_ms
+      - injections_updated
+      - patterns_updated
+      - pattern_ids
       - recorded_at
       - error_message
 
@@ -100,11 +96,11 @@ io_operations:
 # DEPENDENCIES
 # =============================================================================
 dependencies:
-  - name: "postgres_adapter"
+  - name: "pattern_repository"
     type: "protocol"
-    class_name: "ProtocolPostgresAdapter"
-    module: "omnibase_infra.protocols.protocol_postgres_adapter"
-    description: "PostgreSQL adapter for writing session outcomes and updating rolling metrics"
+    class_name: "ProtocolPatternRepository"
+    module: "omniintelligence.nodes.node_pattern_feedback_effect.handlers.handler_session_outcome"
+    description: "Pattern repository protocol for database operations (fetch/execute) on session outcomes and rolling metrics"
     required: true
 
 # =============================================================================
