--- a/src/omniintelligence/nodes/pattern_storage_effect/contract.yaml
+++ b/src/omniintelligence/nodes/pattern_storage_effect/contract.yaml
@@ -43,7 +43,7 @@ input_model:
   module: "omniintelligence.nodes.pattern_storage_effect.models"
   description: "Input model containing learned pattern data for storage operations."
 output_model:
-  name: "ModelPatternStorageOutput"
+  name: "ModelPatternStoredEvent"
   module: "omniintelligence.nodes.pattern_storage_effect.models"
   description: "Output model containing storage operation results and pattern status."
 
@@ -60,7 +60,7 @@ output_model:
 #   3. Route to appropriate handler (store or promote)
 #   4. Persist to pattern store
 #   5. Emit appropriate result event (stored or promoted)
-#   6. Return ModelPatternStorageOutput with operation outcome
+#   6. Return ModelPatternStoredEvent with operation outcome
 # =============================================================================
 handler_routing:
   routing_strategy: "operation_match"
@@ -220,11 +220,11 @@ event_bus:
   # Metadata for published topics
   publish_topic_metadata:
     "onex.evt.omniintelligence.pattern-stored.v1":
-      schema_ref: "omniintelligence.nodes.pattern_storage_effect.models.ModelPatternStorageOutput"
+      schema_ref: "omniintelligence.nodes.pattern_storage_effect.models.ModelPatternStoredEvent"
       description: "Pattern storage confirmation with storage location and metadata"
       content_type: "application/json"
     "onex.evt.omniintelligence.pattern-promoted.v1":
-      schema_ref: "omniintelligence.nodes.pattern_storage_effect.models.ModelPatternPromotionOutput"
+      schema_ref: "omniintelligence.nodes.pattern_storage_effect.models.ModelPatternPromotedEvent"
       description: "Pattern promotion confirmation with status transition details"
       content_type: "application/json"
 
