--- a/pyproject.toml
+++ b/pyproject.toml
@@ -86,6 +86,7 @@ llama-index = ">=0.12.0"
 sentence-transformers = ">=4.1.0"
 torch = ">=2.0.0"
 transformers = ">=4.30.0"
+tiktoken = ">=0.5.0"
 # Utilities
 cachetools = ">=5.3.0"
 redis = {extras = ["hiredis"], version = ">=5.0.0"}
@@ -167,6 +168,7 @@ core = [
     "sentence-transformers>=4.1.0",
     "torch>=2.0.0",
     "transformers>=4.30.0",
+    "tiktoken>=0.5.0",
     # Utilities
     "tenacity>=8.2.0",
     "cachetools>=5.3.0",
