refactor(OMN-1668): Remove imperative convenience methods, use declarative execute() only
Remove store_pattern() and promote_pattern() typed methods from NodePatternStorageEffect,
keeping only the declarative execute(operation, input_data) entry point. This follows the
NodeClaudeHookEventEffect pattern and reduces node.py from 447 to 285 lines.

- Remove store_pattern() and promote_pattern() methods from node.py
- Clean unused imports (UUID, typed models, error constants)
- Update module docstring to show execute() usage pattern
- Update integration tests to use execute() instead of typed methods

--- a/src/omniintelligence/nodes/pattern_storage_effect/contract.yaml
+++ b/src/omniintelligence/nodes/pattern_storage_effect/contract.yaml
@@ -74,7 +74,7 @@ handler_routing:
     - operation: "store_pattern"
       handler:
         function: "handle_store_pattern"
-        module: "omniintelligence.nodes.pattern_storage_effect.handlers.handler_pattern_storage"
+        module: "omniintelligence.nodes.pattern_storage_effect.handlers.handler_store_pattern"
         type: "async"
       description: "Persist a learned pattern to storage"
       actions:
@@ -86,7 +86,7 @@ handler_routing:
     - operation: "promote_pattern"
       handler:
         function: "handle_promote_pattern"
-        module: "omniintelligence.nodes.pattern_storage_effect.handlers.handler_pattern_storage"
+        module: "omniintelligence.nodes.pattern_storage_effect.handlers.handler_promote_pattern"
         type: "async"
       description: "Promote a candidate pattern to active status"
       actions:
