fix(OMN-1672): Fix ruff linting errors for CI
- Sort __all__ lists alphabetically (RUF022) across 13 files
- Add per-file ignores for stdlib API method names:
  - N802 for ast.NodeVisitor methods (visit_Module, visit_ClassDef)
  - N802 for BaseHTTPRequestHandler.do_GET in __main__.py files
  - B017 for intentional broad exception catching in tests

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -228,8 +228,13 @@ ignore = [
 [tool.ruff.lint.per-file-ignores]
 # AST visitor methods must use PascalCase (visit_Import, visit_Call, etc.)
 "src/omniintelligence/audit/io_audit.py" = ["N802"]
+"tests/unit/test_node_purity.py" = ["N802"]
+# BaseHTTPRequestHandler requires do_GET method name
+"src/omniintelligence/nodes/*/__main__.py" = ["N802"]
 # __init__.py files re-export for public API
 "src/omniintelligence/tools/__init__.py" = ["F401"]
+# Test intentionally catches broad exceptions for validation error testing
+"tests/nodes/pattern_extraction_compute/test_handlers.py" = ["B017"]
 
 [tool.ruff.format]
 quote-style = "double"
