feat(OMN-1672): Add pattern compilation step with safety validation (#48)
* feat(OMN-1672): Add pattern compilation step with safety validation

Implement pattern compiler that transforms raw LearnedPattern records
into injectable markdown snippets with token counting and security checks.

Components:
- util_token_counter: tiktoken-based token counting (cl100k_base)
- injection_safety: Control char, ANSI, prompt injection prevention
- handler_compile_pattern: Compiler with versioned format output

Key invariants:
- compiled_snippet IS NOT NULL = safe + injectable
- Rejection logs structured warning, stores nothing
- No fallback rendering in consumers

Tests: 105 unit tests covering all safety checks and compilation logic.

* fix(OMN-1672): Address code review feedback for pattern compilation

- Fix prompt injection regex false positives on markdown horizontal rules
- Reject carriage return (\r) for terminal injection safety
- Make token counter thread-safe using lru_cache
- Add ellipsis indicator for truncated pattern names (>100 chars)
- Add ellipsis indicator for truncated keywords (>10 items)
- Update tests to cover new edge cases (109 tests passing)

* fix(OMN-1672): Use datetime.UTC alias for pyupgrade compatibility

Replace timezone.utc with UTC alias per UP017 ruff rule.

* fix(OMN-1672): Fix ruff linting errors for CI

- Sort __all__ lists alphabetically (RUF022) across 13 files
- Add per-file ignores for stdlib API method names:
  - N802 for ast.NodeVisitor methods (visit_Module, visit_ClassDef)
  - N802 for BaseHTTPRequestHandler.do_GET in __main__.py files
  - B017 for intentional broad exception catching in tests

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -86,6 +86,7 @@ llama-index = ">=0.12.0"
 sentence-transformers = ">=4.1.0"
 torch = ">=2.0.0"
 transformers = ">=4.30.0"
+tiktoken = ">=0.5.0"
 # Utilities
 cachetools = ">=5.3.0"
 redis = {extras = ["hiredis"], version = ">=5.0.0"}
@@ -167,6 +168,7 @@ core = [
     "sentence-transformers>=4.1.0",
     "torch>=2.0.0",
     "transformers>=4.30.0",
+    "tiktoken>=0.5.0",
     # Utilities
     "tenacity>=8.2.0",
     "cachetools>=5.3.0",
@@ -226,8 +228,13 @@ ignore = [
 [tool.ruff.lint.per-file-ignores]
 # AST visitor methods must use PascalCase (visit_Import, visit_Call, etc.)
 "src/omniintelligence/audit/io_audit.py" = ["N802"]
+"tests/unit/test_node_purity.py" = ["N802"]
+# BaseHTTPRequestHandler requires do_GET method name
+"src/omniintelligence/nodes/*/__main__.py" = ["N802"]
 # __init__.py files re-export for public API
 "src/omniintelligence/tools/__init__.py" = ["F401"]
+# Test intentionally catches broad exceptions for validation error testing
+"tests/nodes/pattern_extraction_compute/test_handlers.py" = ["B017"]
 
 [tool.ruff.format]
 quote-style = "double"
